--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,10 @@
+--extra-index-url https://download.pytorch.org/whl/cpu
+
 torch==2.0.1
 torchvision==0.15.2
+
 numpy
 pillow
 matplotlib
 streamlit
+
