--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,9 @@
---extra-index-url https://download.pytorch.org/whl/cpu
-
-torch==2.0.1
-torchvision==0.15.2
-
+torch
+torchvision
 numpy
 pillow
 matplotlib
 streamlit
+scikit-learn
+
 
